--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,6 +8,7 @@
 		<welcome-file>index.jsp</welcome-file> <welcome-file>default.html</welcome-file> 
 		<welcome-file>default.htm</welcome-file> <welcome-file>default.jsp</welcome-file> 
 		</welcome-file-list> -->
+	
 	<servlet>
 		<servlet-name>Spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -16,4 +17,19 @@
 		<servlet-name>Spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/Spring-servlet.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
